--- a/src/sass/components/Header/_header.scss
+++ b/src/sass/components/Header/_header.scss
@@ -47,8 +47,10 @@ header {
           justify-content: center;
           border-radius: 30px;
           position: absolute;
-          top: 13px;
-          right: 110px;
+          top: 14px;
+          right: 103px;
+          width: 17px;
+          height: 17px;
           span {
             color: white;
             font-size: 12px;
@@ -83,24 +85,18 @@ header {
           font-size: 16px;
         }
         .new{
-          // font-family:"Abril Fatface", sans-serif;
           background: linear-gradient(to right, crimson,pink,springgreen);
           background-size: 200% 200%;
           animation: rainbow 2s ease-in-out infinite;
           background-clip: text;
           -webkit-background-clip:text;
           color:rgba(0,0,0,1);
-          // font-size:10rem;
-          // width:80vw;
-          // margin:30vh auto;
           display:block;
           text-align:center;
           transition: color .2s ease-in-out;
           text-transform:uppercase;
           font-weight:900;
-        }
-        .gradient-text:hover{
-          color:rgba(0,0,0,0);
+             color:rgba(0,0,0,0);
         }
         @keyframes rainbow { 
           0%{background-position:left}
