--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -22,3 +22,7 @@
 @use "./components/Header/_brushsetsAndAccessories";
 @use "./components/Header/brushes";
 @use "./components/Header/faceEyeLips";
+
+// Cart page
+@use "./pages/Cart/cart";
+@use "./pages/Cart/cartPage";
