--- a/src/sass/pages/Cart/_cartPage.scss
+++ b/src/sass/pages/Cart/_cartPage.scss
@@ -107,41 +107,99 @@
             }
           }
         }
-        .cartPayDetail{
+        .cartPayDetail {
           width: 30%;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-around;
-          gap: 20px;
-          margin-left: 30px;
-          .total{
-            border-bottom: 1px solid rgb(224, 219, 219);
-            display: flex;
-            text-align: center;
-            width: 100%;
-            justify-content: space-between;
-            p {
-              font-size: 14px;
-              color: #221c35;
-              padding-bottom: 20px;
-            }
-          }
-          .checkout{
-            width: 100%;
+          .cartPay {
             display: flex;
             flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            a {
-              margin-top: 10px;
-              width: 100%;
+            justify-content: space-around;
+            gap: 20px;
+            margin-left: 30px;
+            .total {
+              border-bottom: 1px solid rgb(224, 219, 219);
+              display: flex;
               text-align: center;
-              @include learnMore;
+              width: 100%;
+              justify-content: space-between;
+              p {
+                font-size: 14px;
+                color: #221c35;
+                padding-bottom: 20px;
+              }
             }
-            .shopPay{
-              margin-top: 20px;
-              padding: 10px 40px;
-              background-color: red;
+            .checkout {
+              width: 100%;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+              a {
+                margin-top: 10px;
+                width: 100%;
+                text-align: center;
+                @include learnMore;
+              }
+              .shopPay {
+                margin-top: 20px;
+                padding: 16px 60px;
+                border-radius: 5px;
+                background-color: #5433eb;
+                &:hover {
+                  background-color: #4a2e97;
+                }
+              }
+              .paypal {
+                background: #ffc439;
+                padding: 16px 60px;
+                border-radius: 5px;
+                img {
+                  width: 76px;
+                  height: 24px;
+                }
+                &:hover {
+                  background-color: #f8b720;
+                }
+              }
+              .gpay {
+                background-color: #000;
+                padding: 16px 60px;
+                border-radius: 5px;
+                &:hover {
+                  background-color: #000000da;
+                }
+              }
+            }
+          }
+          .payFaq {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-left: 30px;
+            margin-top: 20px;
+            ul {
+              li {
+                border-top: 1px solid rgb(224, 219, 219);
+                padding-top: 10px;
+                .questions{
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
+                  cursor: pointer;
+                  h3 {
+                    @include heading;
+                    font-size: 36px !important;
+                  }
+                  .icon {
+                   font-size: 25px;
+                   color: grey;
+                  }
+                }
+                p {
+                  font-size: 14px;
+                  color: #221c35;
+                  padding-bottom: 20px;
+                }
+              }
             }
           }
         }
