--- a/src/sass/pages/Home/_bestseller.scss
+++ b/src/sass/pages/Home/_bestseller.scss
@@ -8,13 +8,14 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      width: 100%;
       h3 {
         @include heading;
       }
       .carts {
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
         gap: 30px;
-        flex-wrap: wrap;
         .cart {
           display: flex;
           flex-direction: column;
@@ -59,6 +60,103 @@
         margin-bottom: 70px;
         a {
           @include learnMore;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1561px) {
+  .bestSeller {
+    .carts {
+      display: flex;
+      align-items: center;
+      flex-wrap: nowrap;
+      justify-content: center;
+      gap: 20px;
+      .cart {
+        flex: 0 0 auto;
+        width: 300px;
+        .cartText {
+          h3 {
+            font-size: 23px !important;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1340px) {
+  .bestSeller {
+    .carts {
+      display: flex;
+      align-items: center;
+      flex-wrap: nowrap;
+      justify-content: center;
+      gap: 20px;
+      .cart {
+        flex: 0 0 auto;
+        width: 260px;
+        .cartText {
+          h3 {
+            font-size: 20px !important;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1240px) {
+  .bestSeller {
+    .carts {
+      display: grid !important;
+      grid-template-columns: repeat(3, 1fr) !important;
+    }
+  }
+}
+
+@media (max-width: 950px) {
+  .bestSeller {
+    .container{
+      .carts {
+        display: grid !important;
+        grid-template-columns: repeat(2, 1fr) !important;
+        gap: 40px !important;
+      }
+    }
+  }
+}
+
+@media (max-width: 640px) {
+  .bestSeller {
+    .container{
+      .carts {
+        display: grid !important;
+        grid-template-columns: repeat(1, 1fr) !important;
+        gap: 40px !important;
+        .cart{
+          width: 400px!important;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 410px) {
+  .bestSeller {
+    .container{
+      .carts {
+        display: grid !important;
+        grid-template-columns: repeat(1, 1fr) !important;
+        gap: 40px !important;
+        .cart{
+          img{
+            width: 200px!important;
+            height: 260px!important;
+          }
+          width: 220px!important;
         }
       }
     }
