--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,8 +6,8 @@
 @use "./components/footer";
 
 // Burger menu
-@use "./components/burgermenu";
-
+@use "./components/BurgerMenu/burgermenu";
+@use "./components//BurgerMenu/faceBurger";
 // Pages
 
 // Home page
