--- a/src/sass/components/BurgerMenu/_burgermenu.scss
+++ b/src/sass/components/BurgerMenu/_burgermenu.scss
@@ -1,4 +1,4 @@
-@import "../mixins";
+@import "../../mixins";
 .burgerMenu {
   display: flex;
   flex-direction: column;
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-between;
   }
-  .burger{
+  .burger {
     display: flex;
     align-items: center;
     gap: 20px;
@@ -43,11 +43,11 @@
       @include heading;
     }
     .navList {
-        width: 100%;
-        h4{
-            padding-bottom: 10px;
-            padding-left: 15px;
-        }
+      width: 100%;
+      h4 {
+        padding-bottom: 10px;
+        padding-left: 15px;
+      }
       .navItem {
         display: flex;
         width: 100%;
@@ -61,25 +61,25 @@
       }
     }
   }
-  .burgerLogin{
+  .burgerLogin {
     display: flex;
     gap: 15px;
     padding: 30px;
     border-bottom: 1px solid rgb(201, 197, 197);
-    p{
+    p {
       font-size: 16px;
       color: rgb(99, 99, 99);
     }
   }
-  .endBurger{
+  .endBurger {
     display: flex;
     gap: 20px;
     padding: 30px;
     justify-content: space-between;
     border-bottom: 1px solid rgb(201, 197, 197);
-p{
-  font-size: 16px;
-  color: rgb(99, 99, 99);
-}
+    p {
+      font-size: 16px;
+      color: rgb(99, 99, 99);
+    }
   }
 }
