--- a/src/sass/pages/Home/_reviews.scss
+++ b/src/sass/pages/Home/_reviews.scss
@@ -11,7 +11,7 @@
       justify-content: center;
       align-items: center;
       .reviewText {
-        display: flex;
+        display: flex; 
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -54,10 +54,10 @@
   }
 }
 
-.swiper {
+.mySwiper {
   width: 100%;
   margin: 15px auto;
-  .swiper-slide {
+  .swiperSlidePage {
     font-size: 18px;
     background: transparent;
     display: flex;
@@ -65,7 +65,7 @@
     text-align: left;
     height: 200px;
     .slidePage {
-      width: 65%;
+      width: 70%;
       .starIcon {
         font-size: 23px;
         color: #221c35;
@@ -93,19 +93,75 @@
   }
 }
 
+@media (max-width: 1340px) {
+  .slidePage {
+    width: 250px;
+    height: 180px;
+  }
+}
 
-@media (max-width:865px){
-  .slideText {
-    h3{
-      font-size: 15px !important;
-    }
-    p{
-      display: block;
-      max-width: 98%;
-      white-space: nowrap;
-      overflow: hidden !important;
-      text-overflow: ellipsis;
+@media (max-width: 767px) {
+  .realReviews {
+    .container {
+      .row {
+        .reviewText {
+          justify-content: start;
+          align-items: start;
+          width: 100%;
+          margin-top: 40px;
+          h4 {
+            font-size: 25px;
+          }
+          h2 {
+            font-size: 30px;
+          }
+        }
+      }
     }
   }
 }
 
+@media (max-width: 630px) {
+  .swiper {
+    .swiper-slide {
+      .slidePage {
+        width: 100%;
+      }
+    }
+  }
+  .realReviews {
+    .container {
+      .row {
+        .reviewText {
+          h4 {
+            font-size: 20px;
+          }
+          h2 {
+            font-size: 25px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 360px) {
+  .swiper {
+    .swiper-slide {
+      .slidePage {
+        .starIcon {
+          font-size: 19px;
+          color: #221c35;
+        }
+        .slideText{
+          h3{
+            font-size: 20px;
+          }
+          p{
+            font-size: 15px;
+          }
+        }
+      }
+    }
+  }
+}
