--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -15,8 +15,11 @@
 @use "./pages/Home/aboutsec";
 @use "./pages/Home/hero";
 @use "./pages/Home/discoversec";
+@use "./pages/Home//discoverTwo";
 @use "./pages/Home/values";
+@use "./pages//Home/valueTwo";
 @use "./pages/Home/morezoevasec";
+@use "./pages//Home/more2";
 @use "./pages/Home/reviews";
 @use "./pages/Home/newinsec";
 @use "./pages/Home/bestseller";
