--- a/src/sass/components/BurgerMenu/_burgermenu.scss
+++ b/src/sass/components/BurgerMenu/_burgermenu.scss
@@ -3,10 +3,14 @@
   display: flex;
   flex-direction: column;
   width: 400px;
+  height: 100%;
   background-color: #fff;
   padding: 20px;
-  position: absolute;
+  position: fixed;
   top: 0;
+  left: 0;
+  bottom: 0;
+  overflow-y: auto;
   .menu {
     display: flex;
     justify-content: space-between;
@@ -18,6 +22,7 @@
     margin-top: 50px;
     padding-bottom: 20px;
     border-bottom: 1px solid rgb(201, 197, 197);
+    cursor: pointer;
     img {
       width: 50px;
       height: 50px;
@@ -25,6 +30,12 @@
     h3 {
       font-size: 31px !important;
       @include heading;
+    }
+    &:hover{
+      h3{
+        color: burlywood;
+      }
+      color: burlywood;
     }
   }
   .burgerList {
@@ -54,9 +65,16 @@
         justify-content: space-between;
         align-items: center;
         margin-top: 12px;
+        cursor: pointer;
         .left {
           display: flex;
           gap: 20px;
+        }
+        &:hover{
+          h3{
+            color: burlywood;
+          }
+          color: burlywood;
         }
       }
     }
