--- a/src/sass/pages/Cart/_cart.scss
+++ b/src/sass/pages/Cart/_cart.scss
@@ -3,15 +3,15 @@
 .mycart {
   background-color: white;
   position: fixed;
-  top: 0;
+  top: 0%;
+  bottom: 0%;
   right: -100%;
   width: 350px;
   padding: 30px;
   height: 100vh;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
   transition: 0.9s all;
-  z-index: 3;
-
+  z-index: 999;
   &.open {
     right: 0;
   }
