--- a/src/sass/pages/Home/_bestseller.scss
+++ b/src/sass/pages/Home/_bestseller.scss
@@ -17,13 +17,25 @@
         grid-template-columns: repeat(4, 1fr);
         gap: 30px;
         .cart {
+          position: relative;
           display: flex;
           flex-direction: column;
           align-items: center;
           justify-content: center;
+          cursor: pointer;
           .rating {
             font-size: 14px;
             margin-right: 5px;
+            margin-top: 15px;
+            display: flex;
+            justify-content: start;
+            width: 100%;
+            align-items: center;
+            img {
+              width: 19px;
+              height: 19px;
+              margin-right: 2px;
+            }
           }
           img {
             width: 360px;
@@ -52,6 +64,93 @@
             width: 100%;
             margin-bottom: 15px;
             @include learnMore;
+          }
+          .type {
+            background-color: white;
+            padding: 3px 7px;
+            border-top-left-radius: 7px;
+            border-bottom-right-radius: 7px;
+            color: #221c35;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            p {
+              font-size: 12px;
+              margin-bottom: 5px;
+              letter-spacing: 1.3px;
+            }
+          }
+          .countColor {
+            position: absolute;
+            bottom: 34%;
+            left: 10px;
+            .hoverImgsMoreCount {
+              display: flex;
+              img {
+                width: 50px;
+                height: 16px;
+                margin-right: 2px;
+              }
+              p {
+                font-size: 13px;
+              }
+            }
+          }
+          &:hover {
+            .hoverDiv {
+              opacity: 1;
+              height: auto;
+              transition: height 0.5s ease-in-out, opacity 0.5s ease-in-out;
+              bottom: 33%;
+            }
+          }
+        }
+        .hoverDiv {
+          z-index: 99;
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          transform: translateX(-50%);
+          background: red;
+          width: 100%;
+          min-height: 0;
+          height: 0;
+          color: black;
+          padding: 10px 5px;
+          display: flex;
+          justify-content: start;
+          flex-direction: column;
+          opacity: 0;
+          transition: height 0.5s ease-in-out, opacity 0.5s ease-in-out;
+          .hoverImages {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 3px;
+            img {
+              width: 50px;
+              height: 16px;
+              cursor: pointer;
+              transition: transform 0.4s ease-in;
+              &:hover {
+                border: 1px solid black;
+              }
+            }
+            .color {
+              &:hover {
+                border: 1px solid black;
+              }
+            }
+          }
+
+          p {
+            font-size: 14px;
+            padding: 12px 0px;
+          }
+
+          span {
+            font-size: 12px;
+            margin-bottom: 25px;
+            letter-spacing: 1.1px;
           }
         }
       }
@@ -112,32 +211,99 @@
   .bestSeller {
     .carts {
       display: grid !important;
-      grid-template-columns: repeat(3, 1fr) !important;
-    }
-  }
-}
-
-@media (max-width: 950px) {
-  .bestSeller {
-    .container{
-      .carts {
-        display: grid !important;
-        grid-template-columns: repeat(2, 1fr) !important;
-        gap: 40px !important;
+      grid-template-columns: repeat(4, 1fr) !important;
+      .cart {
+        flex: 0 0 auto;
+        width: 210px;
+        a {
+          font-size: 12px !important;
+        }
+        .cartText {
+          h3 {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 200px;
+          }
+          h4 {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 200px;
+          }
+        }
       }
     }
   }
 }
 
-@media (max-width: 640px) {
+@media (max-width: 990px) {
   .bestSeller {
-    .container{
+    .container {
+      padding-left: 2rem;
+      padding-right: 2rem;
       .carts {
         display: grid !important;
-        grid-template-columns: repeat(1, 1fr) !important;
-        gap: 40px !important;
-        .cart{
-          width: 400px!important;
+        grid-template-columns: repeat(4, 1fr) !important;
+        gap: 5px !important;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        .cart {
+          flex: 0 0 auto;
+          // width: 215px;
+          width: 100%;
+          img {
+            width: 213px !important;
+            height: 213px !important;
+          }
+          .cartText {
+            h4 {
+              font-size: 12px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 875px) {
+  .bestSeller {
+    .container {
+      .row {
+        .carts {
+          display: grid !important;
+          grid-template-columns: repeat(3, 1fr) !important;
+          gap: 20px !important;
+          .cart {
+            flex: 0 0 auto;
+            width: 100%;
+            img {
+              max-width: 100% !important;
+              height: auto !important;
+            }
+            a {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              height: 20px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 750px) {
+  .bestSeller {
+    .container {
+      .row {
+        .carts {
+          display: grid !important;
+          grid-template-columns: repeat(2, 1fr) !important;
+          // gap: 40px !important;
         }
       }
     }
@@ -146,17 +312,19 @@
 
 @media (max-width: 410px) {
   .bestSeller {
-    .container{
-      .carts {
-        display: grid !important;
-        grid-template-columns: repeat(1, 1fr) !important;
-        gap: 40px !important;
-        .cart{
-          img{
-            width: 200px!important;
-            height: 260px!important;
+    .container {
+      .row {
+        .carts {
+          display: grid !important;
+          grid-template-columns: repeat(1, 1fr) !important;
+          // gap: 40px !important;
+          .cart {
+            img {
+              max-width: 100% !important;
+              height: auto !important;
+            }
+            // width: 220px !important;
           }
-          width: 220px!important;
         }
       }
     }
