--- a/src/sass/pages/Home/_morezoevasec.scss
+++ b/src/sass/pages/Home/_morezoevasec.scss
@@ -1,8 +1,7 @@
 @import "../../mixins";
 .moreOfZoevaSec {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
   .container {
-  
     .row {
       display: flex;
       align-items: center;
@@ -17,42 +16,24 @@
         gap: 10px;
         margin: 0 auto;
         padding: 0 30px;
-        
+
         .cart {
           display: flex;
-      flex-direction: column;
-      height: 600px;
-      width: 33%;
-      align-items: center;
-      // justify-content: center;
-      img{
-        width: 100%;
-        height:500px
-      }
-          // display: flex;
-          // align-items: center;
-          // justify-content: center;
-          // gap: 10px;
-          // text-align: center;
-          // flex-direction: column;
-          // background-color: #fff;
-          // border-radius: 5px;
-          // cursor: pointer;
-          // height: 600px;
-          // border: 2px solid red;
-          // img {
-          //   width: 500px;
-          //   height: 500px;
-          // border: 2px solid red;
-
-          // }
+          flex-direction: column;
+          height: 600px;
+          width: 33%;
+          align-items: center;
+          img {
+            width: 100%;
+            height: 500px;
+          }
           .cartText {
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center ;
-width: 95%;
-margin: auto;
+            align-items: center;
+            width: 95%;
+            margin: auto;
             h3 {
               font-size: 50px;
               color: #221c35;
@@ -60,8 +41,8 @@ margin: auto;
               margin-bottom: 15px;
               font-family: "La Mango Light", Arial, sans-serif;
             }
-            p{
-                text-align: center
+            p {
+              text-align: center;
             }
             a {
               @include learnMore;
@@ -69,6 +50,53 @@ margin: auto;
             }
           }
         }
+      }
+    }
+    .moreeTwo {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 950px) {
+  .moreOfZoevaSec {
+    margin-bottom: 0;
+    .container {
+      .row {
+        .carts {
+          .cart {
+            width: 100%;
+            img {
+              width: 100%;
+              height: 400px;
+            }
+            .cartText {
+              width: 100%;
+              h3 {
+                font-size: 40px !important;
+              }
+              p {
+                font-size: 14px;
+              }
+              a {
+                font-size: 12px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 749px) {
+  .moreOfZoevaSec {
+    .container {
+      .row {
+        display: none;
+      }
+      .moreeTwo {
+        display: block;
       }
     }
   }
