--- a/src/sass/pages/Home/_values.scss
+++ b/src/sass/pages/Home/_values.scss
@@ -1,19 +1,24 @@
 @import "../../mixins";
+
 .valuesSec {
   padding-bottom: 70px;
   margin-top: 100px;
+
   .container {
     width: 90%;
     margin: 0 auto;
+
     .row {
       display: flex;
       flex-direction: column;
       gap: 30px;
       justify-content: center;
       align-items: center;
+
       h2 {
         @include heading;
       }
+
       .values {
         display: flex;
         gap: 30px;
@@ -22,22 +27,61 @@
         text-align: center;
         height: auto;
         width: 100%;
+
         .value {
           display: flex;
           flex-direction: column;
           align-items: center;
           gap: 20px;
-          height: 600px;
+          height: auto;
+          
           img {
-            width: 500px;
-            height: 500px;
+            width: 100%;
+            max-width: 500px;
+            height: auto;
           }
+
           p {
-            margin-top: 50px;
-            font-size: 13px;
+            margin-top: 20px;
+            font-size: 14px;
             color: #221c35;
           }
         }
+      }
+    }
+    .valueTwo{
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .valuesSec {
+    .values {
+      gap: 20px;
+
+      .value {
+        img {
+          max-width: 400px;
+        }
+
+        p {
+          font-size: 13px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 740px) {
+  .valuesSec {
+    .container{
+      .row{
+        .values {
+          display: none;
+        }
+      }
+      .valueTwo{
+        display: block;
       }
     }
   }
