--- a/src/sass/components/BurgerMenu/_burgermenu.scss
+++ b/src/sass/components/BurgerMenu/_burgermenu.scss
@@ -14,6 +14,9 @@
   .menu {
     display: flex;
     justify-content: space-between;
+    .icon {
+      cursor: pointer;
+    }
   }
   .burger {
     display: flex;
@@ -31,8 +34,8 @@
       font-size: 31px !important;
       @include heading;
     }
-    &:hover{
-      h3{
+    &:hover {
+      h3 {
         color: burlywood;
       }
       color: burlywood;
@@ -70,8 +73,8 @@
           display: flex;
           gap: 20px;
         }
-        &:hover{
-          h3{
+        &:hover {
+          h3 {
             color: burlywood;
           }
           color: burlywood;
@@ -92,12 +95,40 @@
   .endBurger {
     display: flex;
     gap: 20px;
+    position: relative;
     padding: 30px;
+    width: 100%;
     justify-content: space-between;
     border-bottom: 1px solid rgb(201, 197, 197);
-    p {
+  
+    .titles {
       font-size: 16px;
       color: rgb(99, 99, 99);
+  
+      .headTitle {
+        .head {
+          margin-bottom: 20px;
+          display: flex;
+          align-items: center;
+          cursor: pointer;
+  
+          .downIcon {
+            position: absolute;
+            right: 10px;
+          }
+        }
+      }
+  
+      .children {
+        display: none;
+        flex-direction: column;
+        gap: 20px;
+        cursor: pointer;
+        &.open {
+          display: flex;
+        }
+      }
     }
   }
+  
 }
