--- a/src/sass/pages/Home/_bestseller.scss
+++ b/src/sass/pages/Home/_bestseller.scss
@@ -188,18 +188,27 @@
 
 @media (max-width: 1340px) {
   .bestSeller {
-    .carts {
-      display: flex;
-      align-items: center;
-      flex-wrap: nowrap;
-      justify-content: center;
-      gap: 20px;
-      .cart {
-        flex: 0 0 auto;
-        width: 260px;
-        .cartText {
-          h3 {
-            font-size: 20px !important;
+    .container {
+      .row {
+        display: flex;
+        flex-wrap: wrap;
+        .carts {
+          display: flex;
+          align-items: center;
+          flex-wrap: wrap;
+          justify-content: center;
+          gap: 15px;
+          .cart {
+            flex: 0 0 auto;
+            width: 260px;
+            img {
+              width: 250px;
+            }
+            .cartText {
+              h3 {
+                font-size: 20px !important;
+              }
+            }
           }
         }
       }
@@ -209,27 +218,38 @@
 
 @media (max-width: 1240px) {
   .bestSeller {
-    .carts {
-      display: grid !important;
-      grid-template-columns: repeat(4, 1fr) !important;
-      .cart {
-        flex: 0 0 auto;
-        width: 210px;
-        a {
-          font-size: 12px !important;
-        }
-        .cartText {
-          h3 {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            max-width: 200px;
-          }
-          h4 {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            max-width: 200px;
+    .container {
+      .row {
+        .carts {
+          display: grid !important;
+          grid-template-columns: repeat(4, 1fr) !important;
+          .cart {
+            flex: 0 0 auto;
+            width: 210px;
+            a {
+              font-size: 12px !important;
+            }
+            .cartText {
+              h3 {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: 200px;
+              }
+              h4 {
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: 200px;
+              }
+            }
+            .countColor {
+              .hoverImgsMoreCount {
+                img {
+                  width: 30px;
+                }
+              }
+            }
           }
         }
       }
@@ -242,24 +262,31 @@
     .container {
       padding-left: 2rem;
       padding-right: 2rem;
-      .carts {
-        display: grid !important;
-        grid-template-columns: repeat(4, 1fr) !important;
-        gap: 5px !important;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        .cart {
-          flex: 0 0 auto;
-          // width: 215px;
+      .row {
+        .carts {
+          display: grid !important;
+          grid-template-columns: repeat(4, 1fr) !important;
+          gap: 5px !important;
+          align-items: center;
+          justify-content: center;
           width: 100%;
-          img {
-            width: 213px !important;
-            height: 213px !important;
-          }
-          .cartText {
-            h4 {
-              font-size: 12px;
+          .cart {
+            flex: 0 0 auto;
+            width: 100%;
+            img {
+              width: 213px;
+              height: 213px;
+            }
+            .cartText {
+              h4 {
+                font-size: 12px;
+              }
+            }
+            .countColor {
+              .hoverImgsMoreCount {
+                position: absolute;
+                bottom: 57px;
+              }
             }
           }
         }
@@ -289,6 +316,13 @@
               justify-content: center;
               height: 20px;
             }
+            .countColor {
+              .hoverImgsMoreCount {
+                position: absolute;
+                left: 15px;
+                bottom: 40px;
+              }
+            }
           }
         }
       }
@@ -303,7 +337,14 @@
         .carts {
           display: grid !important;
           grid-template-columns: repeat(2, 1fr) !important;
-          // gap: 40px !important;
+          .cart {
+            .hoverDiv {
+              display: none;
+            }
+            .countColor {
+              display: none;
+            }
+          }
         }
       }
     }
