--- a/src/sass/pages/_checkout.scss
+++ b/src/sass/pages/_checkout.scss
@@ -31,7 +31,7 @@
           flex-direction: column;
           justify-content: center;
           align-items: center;
-
+          width: 100%;
           h3 {
             color: rgb(119, 115, 115);
             font-size: 13px;
@@ -101,11 +101,13 @@
         }
         .checkoutForm {
           padding: 37px;
+          .textInput {
+            margin-top: 20px;
+          }
           .contactHeading {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 15px;
             h3 {
               font-size: 21px;
               font-weight: 700;
@@ -118,7 +120,8 @@
           }
           .contactWithEmail {
             display: flex;
-            margin-top: 15px;
+            align-items: center;
+            margin-top: 18px;
             input {
               width: 16px;
               height: 16px;
@@ -129,59 +132,7 @@
             }
           }
           .delivery {
-            margin-top: 35px;
-          }
-          .selectContainer {
-            position: relative;
-            width: 100%;
-            margin-top: 20px;
-          
-            select {
-              width: 100%;
-              padding: 17px 15px;
-              border-radius: 3px;
-              border: 1px solid #ccc;
-              font-size: 13px;
-              outline: none;
-              background: transparent;
-              appearance: none;
-              cursor: pointer;
-            }
-          
-            label {
-              position: absolute;
-              left: 15px;
-              top: 50%;
-              transform: translateY(-50%);
-              color: #929191;
-              font-size: 16px;
-              transition: all 0.3s ease;
-            }
-          
-            select.filled + label {
-              top: 10px;
-              font-size: 12px;
-              color: #ccc;
-            }
-          }
-          
-          .userName {
-            display: flex;
-            gap: 10px;
-          }
-          .postal {
-            display: flex;
-            gap: 10px;
-          }
-          .inputAnswear {
-            display: flex;
-            position: relative;
-            .question {
-              position: absolute;
-              right: 15px;
-              top: 30px;
-              color: rgb(97, 93, 93);
-            }
+            margin-top: 30px;
           }
           h4 {
             margin-top: 25px;
@@ -213,56 +164,175 @@
             border: 1px solid rgb(224, 219, 219);
             border-radius: 5px;
             .cartDetails {
+              background-color: #faf5f6;
               display: flex;
-              align-items: center;
+              flex-direction: column;
               justify-content: space-between;
               padding: 13px;
               border-bottom: 1px solid rgb(224, 219, 219);
-              img {
-                width: 38px;
-                height: 24px;
+              border-top-left-radius: 4px;
+              border-top-right-radius: 4px;
+              .creditCard {
+                display: flex;
+                gap: 10px;
+                justify-content: space-between;
+                .cartDetail {
+                  display: flex;
+                  gap: 10px;
+                  align-items: center;
+                  p {
+                    color: #000;
+                    font-size: 14px;
+                  }
+                }
+                .carts {
+                  display: flex;
+                  gap: 7px;
+                  img {
+                    width: 38px;
+                    height: 24px;
+                  }
+                  .union {
+                    padding: 3px 13px;
+                    color: white;
+                    background-color: #000;
+                    border-radius: 3px;
+                    &:hover {
+                      background-color: #000000da;
+                      cursor: pointer;
+                    }
+                  }
+                }
+              }
+            }
+            .creditCardActive {
+              background-color: #f4f4f4;
+              border-bottom: 1px solid rgb(224, 219, 219);
+              .cardActiveContainer {
+                padding: 17px;
+                .cardActive {
+                  display: flex;
+                  gap: 15px;
+                  margin-top: 20px;
+                  margin-bottom: 20px;
+                }
+                input {
+                  background-color: white;
+                }
+                .checkBoxDeactive {
+                  display: flex;
+                  gap: 10px;
+                  align-items: center;
+                  padding: 20px 0 10px 0;
+                  input {
+                    width: 16px;
+                    height: 16px;
+                  }
+                  p {
+                    color: #000;
+                    font-size: 14px;
+                  }
+                }
+              }
+            }
+            .paypalDetails {
+              display: flex;
+              justify-content: space-between;
+              padding: 13px;
+              border-bottom-left-radius: 4px;
+              border-bottom-right-radius: 4px;
+              .cartDetail {
+                display: flex;
+                gap: 15px;
+                align-items: center;
+                p {
+                  color: #000;
+                  font-size: 14px;
+                }
               }
               .paypalLogo {
                 width: 85px;
                 height: 21px;
               }
-              .cartDetail {
-                display: flex;
-                gap: 10px;
+            }
+            .paypalActive {
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+              text-align: center;
+              margin: 0 auto;
+              padding: 30px;
+              background-color: #f4f4f4;
+              border-bottom-right-radius: 4px;
+              border-bottom-left-radius: 4px;
+              border-top: 1px solid rgb(224, 219, 219);
+              img {
+                width: 163px;
+                height: 81px;
               }
-              .carts {
-                display: flex;
-                gap: 7px;
-                img {
-                  width: 38px;
-                  height: 24px;
-                }
-                .union {
-                  padding: 3px 13px;
-                  color: white;
-                  background-color: #000;
-                  border-radius: 3px;
-                  &:hover {
-                    background-color: #000000da;
-                    cursor: pointer;
-                  }
-                }
+              p {
+                margin-top: 20px;
+                color: #000;
+                font-size: 14px;
+                width: 65%;
               }
             }
           }
+
           .remember {
             margin-top: 25px;
             margin-bottom: 12px;
           }
-          .rememberMe {
-            display: flex;
-            padding: 15px 10px;
+
+          .rememberContainer {
             border: 1px solid rgb(224, 219, 219);
-            border-radius: 3px;
-            p {
-              color: #424242;
-              font-size: 14px;
-              margin-left: 10px;
+            border-radius: 4px;
+            .rememberMeShipping {
+              display: flex;
+              padding: 15px 10px;
+              border-bottom: 1px solid rgb(224, 219, 219);
+              cursor: pointer;
+              p {
+                color: #424242;
+                font-size: 14px;
+                margin-left: 10px;
+              }
+            }
+            .selected {
+              background-color: #faf5f6;
+              border: 1px solid #d5a7af;
+              border-top-left-radius: 4px;
+              border-top-right-radius: 4px;
+            }
+            .rememberMe {
+              display: flex;
+              padding: 15px 10px;
+              cursor: pointer;
+              p {
+                color: #424242;
+                font-size: 14px;
+                margin-left: 10px;
+              }
+            }
+            .selectedd {
+              background-color: #faf5f6;
+              border: 1px solid #d5a7af;
+            }
+            .inputsGroup {
+              border-top: 1px solid rgb(224, 219, 219);
+              padding: 0 17px;
+              background-color: #f4f4f4;
+              overflow: hidden;
+              max-height: 0;
+              transition: max-height 0.3s ease-out, padding 0.3s ease-out;
+              input {
+                background-color: white;
+              }
+            }
+            .show {
+              max-height: 450px;
+              padding-bottom: 17px;
             }
           }
           .secure {
@@ -288,7 +358,7 @@
               height: 17px;
             }
           }
-          button {
+          .payBtn {
             width: 100%;
             height: 52px;
             border: none;
@@ -304,6 +374,30 @@
               background-color: #000;
             }
           }
+          .paypalBtn {
+            width: 100%;
+            height: 52px;
+            border: none;
+            margin-top: 35px;
+            border-radius: 5px;
+            background-color: #016bb3;
+            color: white;
+            font-size: 18px;
+            font-weight: 700;
+            cursor: pointer;
+            transition: 0.4s all;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 7px;
+            &:hover {
+              background-color: #0164a7;
+            }
+            img {
+              width: 76px;
+              height: 24px;
+            }
+          }
           .end {
             border-top: 1px solid rgb(224, 219, 219);
             margin-top: 60px;
@@ -313,7 +407,7 @@
             font-size: 13px;
             font-weight: 700;
             a {
-              color: rgba(201,133, 146, 1);
+              color: rgba(201, 133, 146, 1);
               margin-top: 10px;
               border-bottom: 1px solid;
             }
@@ -382,13 +476,16 @@
             align-items: center;
             justify-content: center;
             gap: 15px;
+            margin-top: 15px;
+            input {
+              background-color: white;
+            }
             button {
               background-color: transparent;
               border: 1px solid #c2c1c1;
               border-radius: 3px;
               width: 74px;
               height: 48px;
-              margin-top: 10px;
               font-size: 14px;
               color: #535353;
               font-weight: 800;
@@ -399,7 +496,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            p{
+            p {
               font-size: 14px;
               font-weight: 700;
               color: #000000cc;
@@ -426,13 +523,13 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            h3{
+            h3 {
               display: flex;
               gap: 10px;
               align-items: center;
               font-weight: 900;
               font-size: 19px;
-              p{
+              p {
                 font-size: 14px;
                 font-weight: 700;
                 color: #000000cc;
